--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <a href="#inicio" class="logo-nav">Aura Pilates</a>
         <div class="nav-links">
             <a href="#metodo">El Método</a> <a href="#servicios">Servicios</a>
-            <a href="#preguntas">Preguntas</a> <a href="#contact">Contacto</a>
+            <a href="#contact">Contacto</a> <a href="#preguntas">Preguntas</a>
             <a href="{{ data.whatsapp_link }}" target="_blank" class="nav-btn">Reservar Clase</a>
         </div>
     </nav>
@@ -26,7 +26,7 @@
             <img src="{{ url_for('static', filename='img/hero_image.jpg') }}" alt="Estudio de Pilates Minimalista">
         </div>
     </header>
-    
+
     <section class="about-section section" id="nosotros">
         <div class="about-content">
             <h2>Nuestra Filosofía</h2>
