--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <nav class="main-nav">
         <a href="#inicio" class="logo-nav">Aura Pilates</a>
         <div class="nav-links">
-            <a href="#metodo">El Método</a> <a href="#servicios">Servicios</a>
+            <a href="#nosotros">Nosotros</a> <a href="#servicios">Servicios</a>
             <a href="#contact">Contacto</a> <a href="#preguntas">Preguntas</a>
             <a href="{{ data.whatsapp_link }}" target="_blank" class="nav-btn">Reservar Clase</a>
         </div>
