--- a/static/css/style.css
+++ b/static/css/style.css
@@ -368,3 +368,38 @@ details[open] summary::after {
     color: var(--color-texto-oscuro);
     font-size: 0.95rem;
 }
+
+.gallery-section {
+    padding: 100px 0;
+    background-color: #fdfbf9;
+}
+
+.swiper-container {
+    width: 100%;
+    max-width: 1000px;
+    padding: 50px 0;
+}
+
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover; /* Recorta la imagen para que no se deforme */
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+/* Colores personalizados para las flechas */
+.swiper-button-next, .swiper-button-prev {
+    color: var(--color-acento-lavanda);
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--color-acento-lavanda);
+}
