--- a/templates/index.html
+++ b/templates/index.html
@@ -85,13 +85,13 @@
         <div class="swiper-container mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="{{ url_for('static', filename='img/estudio1.jpg') }}" alt="Estudio Aura">
+                    <img src="{{ url_for('static', filename='img/estudio1.webp') }}" alt="Estudio Aura">
                 </div>
                 <div class="swiper-slide">
-                    <img src="{{ url_for('static', filename='img/estudio2.jpg') }}" alt="Reformer">
+                    <img src="{{ url_for('static', filename='img/estudio2.webp') }}" alt="Reformer">
                 </div>
                 <div class="swiper-slide">
-                    <img src="{{ url_for('static', filename='img/estudio3.jpg') }}" alt="Clase de Pilates">
+                    <img src="{{ url_for('static', filename='img/estudio3.webp') }}" alt="Clase de Pilates">
                 </div>
             </div>
             <div class="swiper-pagination"></div>
