--- a/templates/index.html
+++ b/templates/index.html
@@ -173,6 +173,10 @@
                 <p>Lunes a viernes de 8 a 21 hs.</p>
                 <p>Sábados de 9 a 14 hs.</p>
             </div>
+
+            <div class="footer-bottom">
+                <p>© 2025 Aura Pilates. Todos los derechos reservados.</p>
+            </div>
         </div>
     </footer>
 
