--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,9 @@
 <body>
 
     <nav class="main-nav">
-        <div class="logo-nav">Aura Pilates</div>
+        <div class="logo-nav">
+            <a href="#inicio" class="logo-link">Aura Pilates</a>
+        </div>
         
         <button class="mobile-menu-btn">
             <i class="fas fa-bars"></i>
