--- a/static/css/style.css
+++ b/static/css/style.css
@@ -281,7 +281,8 @@ footer {
     background-color: rgba(255, 255, 255, 0.75); 
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 3px solid var(--color-acento-menta);
+    box-shadow: 0 4px 10px rgba(221, 238, 221, 0.3); /* Sombra suave del mismo color verde */
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.02);
     z-index: 1000;
 }
