--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
 
+    <div id="preloader">
+        <div class="loader-content">
+            <h1 class="loader-logo">Aura Pilates</h1>
+            <div class="loader-line"></div>
+        </div>
+    </div>
+
     <nav class="main-nav">
         <div class="logo-nav">
             <a href="#inicio" class="logo-link">Aura Pilates</a>
