--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
+    <link rel="preload" as="image" href="static/img/hero_image.webp">
 </head>
 <body>
 
@@ -43,7 +44,7 @@
         <h1>Aura Pilates</h1>
         <p class="slogan">{{ data.slogan }}</p>
         <div class="hero-image-container">
-            <img src="{{ url_for('static', filename='img/hero_image.jpg') }}" alt="Estudio de Pilates Minimalista">
+            <img src="{{ url_for('static', filename='img/hero_image.webp') }}" alt="Estudio de Pilates Minimalista" loading="lazy">
         </div>
     </header>
 
@@ -104,13 +105,13 @@
         <div class="swiper-container mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="{{ url_for('static', filename='img/estudio1.webp') }}" alt="Estudio Aura">
+                    <img src="{{ url_for('static', filename='img/estudio1.webp') }}" alt="Estudio Aura" loading="lazy">
                 </div>
                 <div class="swiper-slide">
-                    <img src="{{ url_for('static', filename='img/estudio2.webp') }}" alt="Reformer">
+                    <img src="{{ url_for('static', filename='img/estudio2.webp') }}" alt="Reformer" loading="lazy">
                 </div>
                 <div class="swiper-slide">
-                    <img src="{{ url_for('static', filename='img/estudio3.webp') }}" alt="Clase de Pilates">
+                    <img src="{{ url_for('static', filename='img/estudio3.webp') }}" alt="Clase de Pilates" loading="lazy">
                 </div>
             </div>
             <div class="swiper-pagination"></div>
