--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
         </div>
     </section>
 	
-    <section id="contact" class="contact-map-section section">
+    <section id="contacto" class="contact-map-section section">
         <h2>Encuéntranos</h2>
         <div id="google-map-container">
             <iframe 
